--- a/wercker.yml
+++ b/wercker.yml
@@ -37,6 +37,7 @@ build:
     - script:
         name: go get
         code: |
+          cd $WERCKER_SOURCE_DIR
           go get -t ./...
 
     # Build the project
